docs: design a Kubernetes operator for Joxette (JOSDK)
New docs/operator-design.md proposing a Java Operator SDK operator with three
CRDs (JoxetteCluster topology + RecordedTopic/EntityType reconciled into the
REST API), a tier→workload mapping, and — the operator's reason to exist — a
catalog single-writer enforcement guardrail (admission webhook + reconcile
backstop).

Frames two clustering tracks: Track A (catalog-coordinated, works on current
self-join code; compaction_locks + one pinned compaction pod) and Track B
(recommended target — Pekko Management Cluster Bootstrap + kubernetes-api
discovery + a coordination.k8s.io Lease behind the SBR/singleton, forming a
real shared cluster so cluster-wide compaction is correct). Track B's app-side
changes (image, pekko-management deps, drop self-join, mgmt port 7626) are
called out as Phase 0 prerequisites, not built here.

- clustering-deployment.md + README: cross-link the operator design
- memory-bank: record the design + Phase 0 prerequisites; correct the
  joxette.roles description to List<String>

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>